--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <!-- Carousel End -->
     <!-- Search Filter home -->
     <div class="hero-warp">
-        <form class="main-search-form">
+        <form id="formpostr" class="main-search-form">
             <div class="search-type">
                 <div class="st-item">
                     <input type="radio" name="st" id="buy" checked>
@@ -475,7 +475,24 @@
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
+    <script>
+        const form = document.getElementById('formpostr');
 
+        form.addEventListener('submit', function(e) {
+            // Prevent default behavior:
+            e.preventDefault();
+            // Create payload as new FormData object:
+            const payload = new FormData(form);
+            // Post the payload using Fetch:
+            fetch('be-palembang-24-production.up.railway.app/formpostr', {
+            method: 'POST',
+            body: payload,
+            })
+            .then(res => res.json())
+            .then(data => console.log(data))
+        })
+    </script>
+    
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
