--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <label for="buy">LACAK PAKET</label>
             </div>
             <div class="search-input">
-                <input type="text" placeholder="Masukan nomor resi anda. Maksimal 10 nomor resi">
+                <input id="resi" name="resi" type="text" placeholder="Masukan nomor resi anda. Maksimal 10 nomor resi">
                 <button class="site-btn">Cari</button>
             </div>
         </form>
