--- a/cekTarif.html
+++ b/cekTarif.html
@@ -269,6 +269,7 @@
 
     <!-- Template Javascript -->
     <script src="js/cekTarif.js"></script>
+    <script src="js/logicform.js"></script>
 </body>
 
 </html>
