--- a/index.html
+++ b/index.html
@@ -489,6 +489,8 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="js/logicform.js"></script>
+
 </body>
 
 </html>
