--- a/detailongkir.html
+++ b/detailongkir.html
@@ -251,6 +251,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="js/logicform.js"></script>
 </body>
 
 </html>
