--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3">
                     <small class="far fa-clock text-primary me-2"></small>
-                    <small> 09.00 PAGI - 21.00 MALAM</small>
+                    <small> 09.00 PAGI - 21.30 MALAM</small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
@@ -177,17 +177,20 @@
     <!-- Carousel End -->
     <!-- Search Filter home -->
     <div class="hero-warp">
-        <form class="main-search-form">
+        <form id="get-resi" class="main-search-form">
             <div class="search-type">
                 <div class="st-item">
                     <input type="radio" name="st" id="buy" checked>
                     <label for="buy">LACAK PAKET</label>
             </div>
             <div class="search-input">
-                <input type="text" placeholder="Masukan nomor resi anda. Maksimal 10 nomor resi">
-                <button class="site-btn">Cari</button>
-            </div>
+                <input id="resi" name="resi" type="text" placeholder="Masukan nomor resi anda. Maksimal 10 nomor resi">
+                <button type="submit" class="site-btn">Cari</button>
+            </div>  
         </form>
+        <div name="hasil-query2">
+
+        </div>
     </div>
 </div>
 
@@ -474,8 +477,7 @@
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-
-
+    
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -490,6 +492,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="js/logicformr.js"></script>
 </body>
 
 </html>
