--- a/login.html
+++ b/login.html
@@ -140,7 +140,7 @@
                 <h1 class="text-primary">MASUK</h1>
                 <p>Belum punya akun? <a href="register.html">Daftar sekarang!</a></p>
               </div>
-              <form>
+              <form id="formpostl">
                 <label for="email">
                   <input id="email" name="email" type="email" placeholder="" autocomplete="off">
                   <span id="span-email">E-Mail</span>
@@ -245,6 +245,7 @@
 
     <!-- Template Javascript -->
     <script src="js/login.js"></script>
+    <script src="js/logicformlog.js"></script>
 </body>
 
 </html>
